feat:completed novinopay cycle, added template for callback and fixed swagger
